--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -2,8 +2,8 @@
 
 one:
   name: MyString
-  email: MyString
-  password_digest: MyString
+  email: foo@bar.com
+  password_digest: <%= User.digest("password") %>
 
 two:
   name: MyString
