--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,11 +1,11 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  name: MyString
+  name: One
   email: foo@bar.com
   password_digest: <%= User.digest("password") %>
 
 two:
-  name: MyString
-  email: MyString
-  password_digest: MyString
+  name: Two
+  email: foo1@bar.com
+  password_digest: <%= User.digest("password") %>
